<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Chat VKontakte</string>
    <string name="chat">Chat</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="you_can_chat">You can chat with your friends for free</string>
    <string name="signup">Login</string>
    <string name="alt_signup">Login via browser</string>
    <string name="messages">Messages</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="no_items">No items</string>
    <string name="loading">Loading…</string>
    <string name="yesterday">yesterday</string>
    <string name="always_connect">Always connect</string>
    <string name="always_connect_summary">Keep connected on exit</string>
    <string name="autostart">Auto start</string>
    <string name="autostart_summary">Automatically launch upon Android device starting</string>
    <string name="push_notifications">Push Settings</string>
    <string name="push_notifications_summary">Use Push notifications (keep battery)</string>
    <string name="preferences">Settings</string>
    <string name="service_running">VK-service: on</string>
    <string name="service_error">VK-service: error</string>
    <string name="network_error">Network error</string>
    <string name="send">send</string>
    <string name="you_have_new_messages">New messages:</string>
    <string name="please_wait">Please wait</string>
    <string name="your_phone">Phone number</string>
    <string name="your_pass">Password</string>
    <string name="your_first">Name</string>
    <string name="your_last">Surname</string>
    <string name="login_error">Login error</string>
    <string name="enter_captcha">Enter captcha</string>
    <string name="signout">Log Out</string>
    <string name="exit">Exit</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="phone_used">Your phone number is already used</string>
    <string name="register_params_error">Wrong username/password</string>
    <string name="confirm_code">Confirmation code</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend</string>
    <string name="repeat_pass">Password </string>
    <string name="confirm_summary_text">Enter your phone, name and surname and confirm your registration with SMS-code
    </string>
    <string name="push_connection">Push notifications</string>
    <string name="poll_connection">Poll server</string>
    <string name="connection_type">Connection type</string>
    <string name="poll_connection_settings">Connection settings</string>
    <string name="timeout">Refresh every</string>
    <string name="t1">1 min</string>
    <string name="t5">5 min</string>
    <string name="t10">10 min</string>
    <string name="t15">15 min</string>
    <string name="t30">30 min</string>
    <string name="t60">every 1 hour</string>
    <string name="t120">2 hours</string>
    <string name="t240">4 hours</string>

    <string name="online">Online</string>
    <string name="friends">Friends</string>
    <string name="send_logs">Send logs</string>
    <string name="select_mail_app">Select mail-app</string>
    <string name="no_mail_app">No mail-app installed!</string>
    <string name="chat_members">Group participants</string>
    <string name="add_chat_member">Add participant</string>
    <string name="edit_title">Edit title</string>
    <string name="error_editing_chat">Error editing chat. Please try again</string>
    <string name="select_contact">Select contact</string>
    <string name="create_group_chat">Create new group</string>
    <string name="cant_create_group_chat">Can\'t create group chat. Try again later</string>
    <string name="start_typing">Start typing contact name</string>
    <string name="send_message">Send message</string>
    <string name="send_invitation">Send invitation</string>
    <string name="call">Call</string>
    <string name="call_to">Call to</string>
    <string name="add_to_friends">Add to friends</string>
    <string name="cancel_invitation">Cancel request</string>
    <string name="user_not_registered">User is not registered. Send an invitation</string>
    <string name="delete_friend">Remove contact</string>
    <string name="friend_suggestions">Friend suggestions</string>
    <string name="friend_sent_req">Sent friend requests</string>
    <string name="friend_recv_req">Recieved friend requests</string>
    <string name="refresh">Refresh</string>
    <string name="connection_error">Connection lost. Connection will be restored automatically</string>
    <string name="typing">typing…</string>
    <string name="you_can_sync">You can sync your VK-contacts with your phone contacts</string>
    <string name="sync_contacts">Sync contacts</string>
    <string name="no_messages">No messages</string>
    <string name="invitation_text">Check out Vkontakte Messenger! Download https://play.google.com/store/apps/details?id=ru.nacu.vkmsg</string>
    <string name="new_group_chat">New group</string>
    <string name="upload_photo">Upload photo</string>
    <string name="app_settings">App settings</string>
    <string name="upload_error">Error file upload</string>
    <string name="error_loading_attachment">Error attachment upload</string>
    <string name="forwarded_messages">Messages:</string>
    <string name="audio">Audio:</string>
    <string name="video">Video:</string>
    <string name="photo">Photo:</string>
    <string name="documents">Docs:</string>
    <string name="pls_reauth">Please try to reconnect</string>
    <string name="make_photo">Take photo</string>
    <string name="choose_photo">Choose pic from gallery</string>
    <string name="attach_location">Attach location</string>
    <string name="cant_send_this_photo">Can\'t send this photo</string>
    <string name="cancel">Cancel</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="select_location">Select location</string>
    <string name="select_point">Select</string>
</resources>

