<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@drawable/tiled_light_bg"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <ImageView
            android:src="@drawable/logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:layout_weight="0"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

    <LinearLayout android:layout_weight="0"
                  android:layout_marginRight="10dp"
                  android:layout_marginLeft="37dp"
                  android:layout_width="fill_parent"
                  android:gravity="bottom"
                  android:layout_height="wrap_content">

        <EditText
                android:id="@+id/edit_id"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/your_phone"
                android:textColor="@color/darkgray"
                android:textColorHint="@color/medium_gray"
                android:background="@drawable/input_r_full"
                />

        <ImageView android:src="@drawable/phone"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout android:layout_weight="0"
                  android:layout_marginTop="5dp"
                  android:layout_marginRight="37dp"
                  android:layout_marginLeft="10dp"
                  android:layout_width="fill_parent"
                  android:gravity="bottom"
                  android:layout_height="wrap_content">

        <ImageView android:src="@drawable/pass"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/edit_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/your_pass"
                android:textColor="@color/darkgray"
                android:textColorHint="@color/medium_gray"
                android:password="true"
                android:background="@drawable/input_l_full"
                />

    </LinearLayout>

    <Button
            android:layout_marginTop="7dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:id="@+id/btn_submit"
            android:text="@string/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            style="@style/blue_button"
            />

    <LinearLayout
            android:id="@+id/error"
            android:layout_margin="7dp"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <TextView android:id="@+id/error_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="18dp"
                  android:text="@string/login_error"
                  android:textColor="@color/darkgray"/>

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="5dp"
                   android:padding="3dp"
                   android:src="@drawable/error"/>

    </LinearLayout>

    <RelativeLayout
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:background="@drawable/signup_bg"
            android:layout_height="0px"
            android:layout_weight="1">
        <LinearLayout
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView android:text="@string/register"
                      style="@style/register_text"
                      android:gravity="center"
                      android:paddingBottom="12dp"
                      android:layout_height="wrap_content"
                      android:layout_width="fill_parent"/>
            <TextView android:text="@string/you_can_chat"
                      style="@style/register_summary_text"
                      android:gravity="center"
                      android:layout_height="wrap_content"
                      android:layout_width="fill_parent"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>