<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/view_bg"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout android:id="@+id/android:empty"
                  android:gravity="center"
                  android:layout_width="fill_parent"
                  android:layout_height="0px"
                  android:layout_weight="1">

        <LinearLayout
                android:id="@+id/loading"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center">

            <ProgressBar style="@style/ProgressBar.Blue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView android:id="@+id/empty"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:gravity="center"
                  android:text="@string/no_items"
                />

    </LinearLayout>

    <ListView android:id="@+id/android:list"
              android:layout_width="fill_parent"
              android:layout_height="0px"
              android:layout_weight="1"
              android:divider="@color/lighter_gray"
              android:dividerHeight="0.6dp"
              android:fadingEdge="none"
            />

    <Button
            android:layout_marginTop="7dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:id="@+id/btn_add"
            android:text="@string/add_chat_member"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            style="@style/blue_button"
            />

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="0.6dp"
                  android:background="@color/lighter_gray"
                  android:layout_margin="3dp"/>

    <EditText
            android:id="@+id/edit_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:background="@drawable/input"
            android:inputType="text"/>

    <Button
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:id="@+id/btn_edit_title"
            android:text="@string/edit_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            style="@style/blue_button"
            />

</LinearLayout>